test/files/pos/t12740b/Z_2.scala
//> using options -Yimports:java.lang,scala,scala.Predef,Y

package Z {
  //import Y._
  class C extends NSE
}
