test/files/neg/t2458b/test.scala
//> using options -Xsource:2.13
import q._

package q.qq {
  class C extends CC   // ambiguous though same underlying
}
